# RoBC

./: .gitignore  LICENSE  README.md  pyproject.toml  run_trainer.sh  trainer.py
examples/: basic_usage.py
robc/: __init__.py  cluster.py  controller.py  posterior.py  thompson_sampling.py
scripts/: generate_charts.py
tests/: __init__.py  test_cluster.py  test_controller.py  test_posterior.py
